--- a/app/views/recommends/_form.html.erb
+++ b/app/views/recommends/_form.html.erb
@@ -8,6 +8,7 @@
             <p>Main</p>
             <%= f.input :re_filter, label: "[gadgets, geeky, home&kitchen, fashion, travel]"%>
             <%= f.input :re_title %>
+            <%= f.input :sub_number_01, label: "Post Date"%>
             <%= f.input :re_intro %>
             <%= f.input :sub_intro %>
             <%= f.input :re_image %>
