--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -115,11 +115,13 @@
 /* End Featured Main Page */
 
 /* Begin Featured Detail Page */
-.cu_wrap{margin-top:300px;}
-.cu_wrap .detitle{margin:0 0 100px 0;text-align:center;color:#000;}
+.cu_wrap{margin-top:300px;font-family: 'Montserrat', sans-serif;}
+.cu_wrap .detitle{margin:0 0 100px 0;color:#000;width:70%;}
 .cu_wrap .detitle h2{font-size:30px;display:inline;border-bottom:0.4em solid rgba(0,168,225,0.2);position:relative;}
 .cu_wrap .detitle h2 span{position:relative;top:0.4em;}
-.cu_wrap .detitle p{color:#616161;width:85%;margin:20px auto;font-family: 'Montserrat', sans-serif;}
+.cu_wrap .detitle p{color:#616161;margin:10px auto;}
+.cu_wrap .detitle .post_date{display:block;margin-top:10px;}
+.cu_wrap .detitle .post_date em{margin-left:10px;}
 .cu_wrap .detitle .trial{}
 .cu_wrap .detitle .trial a{background:#08f;color:#fff;padding:10px;}
 .cu_wrap .detitle .admin a{text-decoration:none;color:#3d3d3d;margin-left:15px;}
@@ -130,12 +132,13 @@
 .cu_wrap .pic .start{position:absolute;top:10px;right:10px;}
 .cu_wrap .pic .start img{width:50px;}
 .cu_wrap .pic>a>img{width:100%;height:100%;object-fit:contain;}
-.cu_wrap .inner{float:left;width:500px;color:#616161;font-family: 'Montserrat', sans-serif;}
+.cu_wrap .inner{float:left;width:500px;color:#616161;}
 .cu_wrap .inner>strong{font-size:26px;display:block;line-height:1.2;font-weight:100;}
 .cu_wrap .inner>strong>span{display:none;}
 .cu_wrap .inner>span{display:inline-block;border-bottom:1px solid #ccc;margin:15px 0;}
 .cu_wrap .inner>p{border-bottom:1px solid #ccc;padding-bottom:20px;}
-.cu_wrap .inner .btn{margin:20px 0;display:inline-block;}
+.cu_wrap .inner>address{margin-top:-20px;}
+.cu_wrap .inner .btn{margin-top:20px;display:inline-block;}
 .cu_wrap .inner .btn>em{float:left;font-size:20px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:30px;}
 .cu_wrap .inner .btn>a{float:left;text-decoration:none;color:#000;font-size:20px;border:1px solid #000;padding:3px 20px;line-height:30px;}
 
@@ -391,6 +394,8 @@
 .blogs .blog_side .inner{font-family: 'Montserrat', sans-serif;margin-bottom:35px;}
 .blogs .blog_side .inner em{display:block;border-bottom:1px solid #ccc;width:50%;}
 .blogs .blog_side .inner a{text-decoration:none;color:#616161;display:block;}
+.blogs .blog_side .gadget_blog{float:left;width:48%;margin:0 1%;}
+.blogs .blog_side .gadget_blog img{width:100%;height:150px;object-fit:cover;margin-bottom:30px;}
 
 @media screen and (max-width:640px){
   .blogs{margin-top:60px;}
