--- a/app/views/blogs/_body.html.erb
+++ b/app/views/blogs/_body.html.erb
@@ -5,7 +5,8 @@
   </div>
   <div class="image">
     <span>May.12</span>
-    <a href="/blogs/blog_02"><img src="https://images-na.ssl-images-amazon.com/images/I/41G6zxxNH5L.png" alt="Amazon Prime" /></a>
+    <a href="/blogs/blog_02"><img src="https://t1.daumcdn.net/cfile/tistory/99D7C6485CD9104723" alt="Amazon Prime" /></a>
+    <!-- <a href="/blogs/blog_02"><img src="https://images-na.ssl-images-amazon.com/images/I/41G6zxxNH5L.png" alt="Amazon Prime" /></a> -->
   </div>
   <div class="inner">
     <h3><a href="/blogs/blog_02">How to sign up & cancel Amazon Prime free 30-day trial</a></h3>
@@ -23,7 +24,8 @@
 	</div>
 	<div class="image">
 		<span>Apr.25</span>
-		<a href="/blogs/blog_01"><img src="https://icdn2.digitaltrends.com/image/amazon-prime-day-packages-3-720x720.jpg" alt="Amazon Prime"></a>
+		<!-- <a href="/blogs/blog_01"><img src="https://icdn2.digitaltrends.com/image/amazon-prime-day-packages-3-720x720.jpg" alt="Amazon Prime"></a> -->
+    <a href="/blogs/blog_01"><img src="http://cfile9.uf.tistory.com/image/997C0E425CD90FFB186538" alt="Amazon Prime"></a>
 	</div>
 	<div class="inner">
 		<h3><a href="/blogs/blog_01">"All About The Amazon Prime"</a></h3>
