--- a/app/views/blogs/_sidebar.html.erb
+++ b/app/views/blogs/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="bg_wrap">
+<div class="bg_wrap clearfix">
   <h2>Latest Gadgets</h2>
   <% @gadgets.each do |gadget| %>
     <div class="gadget_blog clearfix">
