--- a/app/views/blogs/_sidebar.html.erb
+++ b/app/views/blogs/_sidebar.html.erb
@@ -7,6 +7,102 @@
   <% end %>
 </div>
 
+<!-- <div class="bd_wrap">
+  <div class="tab-menu-wrap">
+    <div class="title-tab-menu">
+      <span>Top 5</span> Promo Codes & Deals
+    </div>
+    <div class="tab-menu-wp">
+      <ul>
+        <li>Promo Codes</li>
+        <li>Deals</li>
+        <li>Coupons</li>
+      </ul>
+      <div class="clear"></div>
+      
+      <div class="page1">
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+           <a href="#n"><img src="https://images.unsplash.com/photo-1551866715-a41148565130?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"></a>
+          </div>
+          <div class="inner">
+            <a href="#n">
+              <p>Aromacare 300ml Essential Oil Diffusers with Color Changing LED Lights, Wood Grain Diffusers for Essential Oils</p>
+              <span>$50.00<em>$100.00</em><span>
+              <address>Take 50% off with promo code: 60OY134F</address>
+            </a>
+          </div>
+        </div>
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+           <a href="#n"><img src="https://images.unsplash.com/photo-1551866715-a41148565130?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"></a>
+          </div>
+          <div class="inner">
+            <a href="#n">
+              <p>Aromacare 300ml Essential Oil Diffusers with Color Changing LED Lights, Wood Grain Diffusers for Essential Oils</p>
+              <span>$50.00<em>$100.00</em><span>
+              <address>Take 50% off with promo code: 60OY134F</address>
+            </a>
+          </div>
+        </div>
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+            <img src="https://images.unsplash.com/photo-1551866715-a41148565130?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+          </div>
+          <div class="inner">
+            <p>This is Page 1</p>
+          </div>
+        </div>
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+            <img src="https://images.unsplash.com/photo-1551866715-a41148565130?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+          </div>
+          <div class="inner">
+            <p>This is Page 1</p>
+          </div>
+        </div>
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+            <img src="https://images.unsplash.com/photo-1551866715-a41148565130?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+          </div>
+          <div class="inner">
+            <p>This is Page 1</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="page1">
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+            <img src="">
+          </div>
+          <div class="inner">
+            page2
+          </div>
+        </div>
+      </div>
+
+      <div class="page1">
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+            <img src="">
+          </div>
+          <div class="inner">
+            page3
+          </div>
+        </div>
+      </div>
+      
+  </div>
+ </div>
+</div> -->
+
 <div class="bf_wrap">
   <h2>Latest Featured</h2>
   <% @recommends.each do |recommend| %>
@@ -17,3 +113,7 @@
     </div>
   <% end %>
 </div>
+
+<script>
+ <%= render(:partial => 'blogs', :handlers => [:erb], :formats => [:js]) %>
+</script>
