--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -80,6 +80,7 @@
 
 @media screen and (max-width:640px){
 	.featured{margin:30px 0 0 0;}
+  .featured .deal h2{display:none;}
 	.featured .sm_pc{display:none;}
 	.featured .sm_mobile{display:block;height:200px;background:#000;position:fixed;right:-800px;top:0;width:80%;z-index:303;}
 	.featured .gnb_open{display:block;position:fixed;right:0;top:2px;z-index:301;margin:0 5%}
