--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -18,6 +18,101 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="40" data-price="35.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30gn2Hl"><img src="https://images-na.ssl-images-amazon.com/images/I/61UEzN0JcCL._SX522_.jpg" alt="COEWSKE 12" Balance Bike for Kids" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30gn2Hl">COEWSKE 12" Balance Bike for Kids Children Running Bicycle No Pedal Walking Bicycle for Ages 18M to 4 Years Old</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$35.99</span><span class="ori_price">$59.99</span></address>
+      <p><span>Take <strong>40% off at $59.99</strong> with promo code: <strong>4012INCH</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/30gn2Hl">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Yt2zgv"><img src="https://images-na.ssl-images-amazon.com/images/I/71fWBR7wGKL._SX522_.jpg" alt="Natural Organic Turmeric Curcumin" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Yt2zgv">Natural Organic Turmeric Curcumin - USDA Certified Turmeric Root Extract, Premium Joint Support, Promotes Joint & Cardiovascular Health</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.49</span><span class="ori_price">$18.99</span></address>
+      <p><span>Take <strong>50% off at $18.99</strong> with promo code: <strong>50NY5FLJ</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Yt2zgv">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="47.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YqE03Q"><img src="https://images-na.ssl-images-amazon.com/images/I/71yTBxg%2BWLL._SX522_.jpg" alt="Smoothie Blenders" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YqE03Q">Smoothie Blenders, 1500W Smoothie Maker,70 Oz Commercial Blender, High Speed Jug Blender Machine 28000 RPM, Mufti-Function Ice Blender</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$47.99</span><span class="ori_price">$79.99</span></address>
+      <p><span>Take <strong>40% off at $79.99</strong> with promo code: <strong>40DB3UWX</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YqE03Q">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="23.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ytv3Hb"><img src="https://images-na.ssl-images-amazon.com/images/I/61ihZXb43lL._SX679_.jpg" alt="TriMagic Full Face Snorkel Mask" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ytv3Hb">TriMagic Full Face Snorkel Mask for Kids and Adult, 180° Panoramic View Snorkeling Mask Set, Easy Breath</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.98</span><span class="ori_price">$39.98</span></address>
+      <p><span>Take <strong>40% off at $39.98</strong> with promo code: <strong>40DI3DC9</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ytv3Hb">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="20.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30fINqH"><img src="https://images-na.ssl-images-amazon.com/images/I/513%2BkttZt5L._SX679_.jpg" alt="Smart Plug, OUKITEL Mini Wifi Outlet Compatible with Alexa" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30fINqH">Smart Plug, OUKITEL Mini Wifi Outlet Compatible with Alexa, Google Assistant & IFTTT, Voice APP Remote, No Hub Required, ETL & FCC Certified</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.39</span><span class="ori_price">$33.99</span></address>
+      <p><span>Take <strong>40% off at $33.99</strong> with promo code: <strong>40TYUIOP</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/30fINqH">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="16.49">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Hh9gN1"><img src="https://m.media-amazon.com/images/I/6119OWqFoyL._SR400,400_.jpg" alt="BassPal Portable Bluetooth Speakers" /></a>
