--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -17,6 +17,195 @@
   </div>
 </div>
  -->
+<div class="card clearfix" data-score="30" data-price="73.91">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ejcgqz"><img src="https://m.media-amazon.com/images/I/61K5foSRimL._SR400,400_.jpg" alt="Electric F1 Foot Massager" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ejcgqz">Electric F1 Foot Massager - Electric Kneading Shiatsu Machine with Heat Rolling and Air Compression Ideal for Home and Office</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$73.91</span><span class="ori_price">$105.59</span></address>
+      <p><span>Take <strong>30% off at $105.59</strong> with promo code: <strong>30DKTZEJ</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ejcgqz">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="40.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VzeH2F"><img src="https://m.media-amazon.com/images/I/71VNHwuyKUL._SR400,400_.jpg" alt="COBY Digital LED Alarm Clock Built In 10W HD Bluetooth Speakers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VzeH2F">COBY Digital LED Alarm Clock Built In 10W HD Bluetooth Speakers FM Radio QI Certified Fast Wireless Charger</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$40.49</span><span class="ori_price">$89.99</span></address>
+      <p><span>Take <strong>55% off at $89.99</strong> with promo code: <strong>559EUL6B</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VzeH2F">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="11.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Yr51nU"><img src="https://m.media-amazon.com/images/I/61I5ZDNf3kL._SR400,400_.jpg" alt="Universal Travel Adapter with 2.4A Dual USB Ports" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Yr51nU">Universal Travel Adapter with 2.4A Dual USB Ports for UK, US, AU, Europe& Asia 150+ International Countries All in One Plug Adapter USB Power Adapter</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.89</span><span class="ori_price">$13.99</span></address>
+      <p><span>Take <strong>15% off at $13.99</strong> with promo code: <strong>15UPPEL2019</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Yr51nU">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="41.94">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YqOyQw"><img src="https://m.media-amazon.com/images/I/71x7vA2vbKL._SR400,400_.jpg" alt="Keto DNA Orange Mango Exogenous Ketone Supplement" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YqOyQw">Keto DNA Orange Mango Exogenous Ketone Supplement | 30 Servings - 420g | BHB Salts for Ketosis | Beta Hydroxybutyrate Ketones Powder</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$41.94</span><span class="ori_price">$59.91</span></address>
+      <p><span>Take <strong>30% off at $59.91</strong> with promo code: <strong>30X2Z5PO</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YqOyQw">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="19.54">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LJt7ZA"><img src="https://m.media-amazon.com/images/I/71AR8xDp1VL._SR400,400_.jpg" alt="Antarctic Krill Oil by KrillDNA" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LJt7ZA">Antarctic Krill Oil by KrillDNA | 1000 mg with Astaxanthin, Omega 3, DHA, EPA, and Phospholipids | Vanilla Coating, No Smell, No Fishy Taste</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.54</span><span class="ori_price">$27.91</span></address>
+      <p><span>Take <strong>30% off at $27.91</strong> with promo code: <strong>30EQ8V7F</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LJt7ZA">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="10.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YunWht"><img src="https://m.media-amazon.com/images/I/71h-bQqRGLL._SR400,400_.jpg" alt="Antarctic Krill Oil by KrillDNA" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YunWht">Antarctic Krill Oil by KrillDNA | 1000 mg with Astaxanthin, Omega 3, DHA, EPA, and Phospholipids | Vanilla Coating, No Smell, No Fishy Taste</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.49</span><span class="ori_price">$14.99</span></address>
+      <p><span>Take <strong>30% off at $14.99</strong> with promo code: <strong>30XEK1UY</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YunWht">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="10.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HiUZ2z"><img src="https://m.media-amazon.com/images/I/71QyHYmVypL._SR400,400_.jpg" alt="TISRO Mouth Safe Reusable Straws" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HiUZ2z">TISRO Mouth Safe Reusable Straws, 6 Metal+4 Silicone(BPA Free) Boba Drinking Straws, 3rd.Generation Anti-Scratch Stainless Steel Straws</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.49</span><span class="ori_price">$14.99</span></address>
+      <p><span>Take <strong>30% off at $14.99</strong> with promo code: <strong>30BIRTHDAY1</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HiUZ2z">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="33.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LFzxsB"><img src="https://m.media-amazon.com/images/I/61tKT7yxNrL._SR400,400_.jpg" alt="NootropX Advanced Nootropic Brain Supplement" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LFzxsB">NootropX Advanced Nootropic Brain Supplement | Clinically Effective Doses | Memory and Focus Enhancement Formula</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$33.95</span><span class="ori_price">$39.95</span></address>
+      <p><span>Take <strong>15% off at $39.95</strong> with promo code: <strong>15VL5WCP</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LFzxsB">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="18.88">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LQUz7A"><img src="https://m.media-amazon.com/images/I/8133K8t34aL._SR400,400_.jpg" alt="FAYERXL Engraved Wood Pen Case" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LQUz7A">FAYERXL Engraved Wood Pen Case for Daughter Personalised Roller Ballpen,Ballpoint Pen,Ball Pen,Refillable Pen,Refill…</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.88</span><span class="ori_price">$26.97</span></address>
+      <p><span>Take <strong>30% off at $26.97</strong> with promo code: <strong>309IBNVJ</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LQUz7A">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="19.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YlX9E6"><img src="https://m.media-amazon.com/images/I/61my2S7elHL._SR400,400_.jpg" alt="MVPower Spin Scrubber" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YlX9E6">MVPower Spin Scrubber,360 Cordless Bathroom Cleaning Brush with 4 Replaceable Scrubber Brush Heads,1 Extendable Handle and Adapter</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.90</span><span class="ori_price">$39.80</span></address>
+      <p><span>Take <strong>50% off at $39.80</strong> with promo code: <strong>50PCGZSG</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YlX9E6">Use Code</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="40" data-price="35.99">
   <div class="image_box">
