--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -61,6 +61,8 @@
 .on_gadgets .card-nav ul{border-bottom:1px solid #ccc;}
 .on_gadgets .card_wrap .card-header,
 .on_gadgets .card_wrap .card-body{position:relative;padding:5px;font-family: 'Montserrat', sans-serif;font-weight:100;}
+.on_gadgets .card_wrap .card-body span{border-bottom:1px solid #ccc;width:55%;display:inline;color:#616161;text-transform:uppercase;}
+.on_gadgets .card_wrap .card-body .to_featured{float:right;margin-right:1%;text-decoration:none;color:#616161;}
 .on_gadgets .card_wrap .card-body h4{margin-top:15px;line-height:1.2;font-weight:100;}
 .on_gadgets .card_wrap .card-body h4 a{text-decoration:none;color:#616161;}
 .on_gadgets .card_wrap .card-body p{margin:10px 0;font-weight:300;color:#616161;}
@@ -73,6 +75,8 @@
 .on_gadgets .card_wrap .card-header{height:208px;padding:0;overflow:hidden;}
 .on_gadgets .card_wrap .start{position:absolute;top:-45px;right:15px;}
 .on_gadgets .card_wrap .start img{width:30px;}
+.on_gadgets .card_wrap .crowdfunding{position:absolute;top:-45px;left:10px;}
+.on_gadgets .card_wrap .crowdfunding p{color:#fff;background:#87c442;padding:0 5px;border-radius:7px;}
 .on_gadgets .card_wrap .card-body .admin{margin-top:-15px;}
 .on_gadgets .card_wrap .card-body .admin>em>a{text-decoration:none;color:#fff;}
 
