--- a/app/views/gadgets/_form.html.erb
+++ b/app/views/gadgets/_form.html.erb
@@ -5,15 +5,17 @@
      <div class="form_border">
        <div class="form_select">
         <%= f.collection_select :category_id, Category.all, :id, :name, { prompt: "Choose a category" } %>
-        <%= f.input :gg_from, label: 'Category' %>
+        <%= f.select :gg_option_01, options_for_select([["NONE", ""], "Crowdfunding"])%>
        </div>
 
        <div class="form_input">
+        <%= f.input :gg_from, label: 'Source' %>
         <%= f.input :gg_title, label: 'Title' %>
         <%= f.input :gg_intro, label: 'Intro' %>
         <%= f.input :gg_img, label: 'Image URL' %>
         <%= f.input :gg_url, label: 'Product URL' %>
         <%= f.input :gg_aprice, label: 'Current Price' %>
+        <%= f.input :gg_option_02, label: 'Discover More' %>
         <%= f.input :gg_youtube01, label: 'Youtube First' %>
        </div>
           
