--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -58,7 +58,16 @@
                         </div>
                       <% end %>
 
-                     <!-- <span><%= gadget.gg_from %></span> -->
+                      <% if gadget.gg_option_01.present? %>
+                        <div class="crowdfunding">
+                          <p>#crowdfunding</p>
+                        </div>
+                      <% end %>
+
+                      <span>BY <%= gadget.gg_from %></span>
+                      <% if gadget.gg_option_02.present? %>
+                        <a class="to_featured" href="<%= gadget.gg_option_02 %>">Discover More</a>
+                      <% end %>
                       <h4><a target="_blank" href="<%= gadget.gg_url %>"><%= gadget.gg_title %></a></h4>
                       <!-- <p><%= gadget.gg_intro %></p> -->
                       <div class="btn clearfix">
