--- a/app/views/home/index_02.html.erb
+++ b/app/views/home/index_02.html.erb
@@ -29,8 +29,17 @@
                   </div>
                 <% end %>
 
+                <% if gadget.gg_option_01.present? %>
+                  <div class="crowdfunding">
+                    <p>#crowdfunding</p>
+                  </div>
+                <% end %>
+
                 <% if gadget.gg_title.present? %>
-                  <!-- <span><%= gadget.gg_from %></span> -->
+                  <span>BY <%= gadget.gg_from %></span> 
+                  <% if gadget.gg_option_02.present? %>
+                    <a class="to_featured" href="<%= gadget.gg_option_02 %>">Discover More</a>
+                  <% end %>
                   <h4><a target="_blank" href="<%= gadget.gg_url %>"><%= gadget.gg_title %></a></h4>
                   <!-- <p><%= gadget.gg_intro %></p> -->
                   <div class="btn clearfix">
