--- a/app/views/gadgets/_form.html.erb
+++ b/app/views/gadgets/_form.html.erb
@@ -5,7 +5,7 @@
      <div class="form_border">
        <div class="form_select">
         <%= f.collection_select :category_id, Category.all, :id, :name, { prompt: "Choose a category" } %>
-        <%= f.select :gg_option_01, options_for_select([["NONE", ""], "Crowdfunding"])%>
+        <%= f.select :gg_option_01, options_for_select([["Crowdfunding", ""], "YES"])%>
        </div>
 
        <div class="form_input">
