--- a/app/views/recommends/show.html.erb
+++ b/app/views/recommends/show.html.erb
@@ -245,8 +245,8 @@
             <p><%= @recommend.sub_intro_06 %></p>
             <div class="btn clearfix">
               <em>$<%= @recommend.sub_price_06 %></em><a target="_blank" href="<%= @recommend.sub_link_06 %>">Buy Now</a>
-            </di
-            <address>Price may be changed after post published date.</address>v>
+            </div>
+            <address>Price may be changed after post published date.</address>
             <div class="related">
              <script type="text/javascript">
               amzn_assoc_placement = "adunit0";
@@ -287,8 +287,8 @@
             <p><%= @recommend.sub_intro_07 %></p>
             <div class="btn clearfix">
               <em>$<%= @recommend.sub_price_07 %></em><a target="_blank" href="<%= @recommend.sub_link_07 %>">Buy Now</a>
-            </di
-            <address>Price may be changed after post published date.</address>v>
+            </div>
+            <address>Price may be changed after post published date.</address>
             <div class="related">
              <script type="text/javascript">
               amzn_assoc_placement = "adunit0";
@@ -329,8 +329,8 @@
             <p><%= @recommend.sub_intro_08 %></p>
             <div class="btn clearfix">
               <em>$<%= @recommend.sub_price_08 %></em><a target="_blank" href="<%= @recommend.sub_link_08 %>">Buy Now</a>
-            </di
-            <address>Price may be changed after post published date.</address>v>
+            </div>
+            <address>Price may be changed after post published date.</address>
             <div class="related">
              <script type="text/javascript">
               amzn_assoc_placement = "adunit0";
@@ -371,8 +371,8 @@
             <p><%= @recommend.sub_intro_09 %></p>
             <div class="btn clearfix">
               <em>$<%= @recommend.sub_price_09 %></em><a target="_blank" href="<%= @recommend.sub_link_09 %>">Buy Now</a>
-            </di
-            <address>Price may be changed after post published date.</address>v>
+            </div>
+            <address>Price may be changed after post published date.</address>
             <div class="related">
              <script type="text/javascript">
               amzn_assoc_placement = "adunit0";
@@ -413,8 +413,8 @@
             <p><%= @recommend.sub_intro_10 %></p>
             <div class="btn clearfix">
               <em>$<%= @recommend.sub_price_10 %></em><a target="_blank" href="<%= @recommend.sub_link_10 %>">Buy Now</a>
-            </di
-            <address>Price may be changed after post published date.</address>v>
+            </div>
+            <address>Price may be changed after post published ate.</address>
             <div class="related">
              <script type="text/javascript">
               amzn_assoc_placement = "adunit0";
